# robot_manipulator

./: .gitignore  .gitignore.swp
ur5_pick_and_place/: README.md
ur5_pick_and_place/devel/: .catkin  local_setup.sh
ur5_pick_and_place/devel/include/extract_pose_service/: object_and_target_position.h  object_and_target_positionRequest.h  object_and_target_positionResponse.h
ur5_pick_and_place/devel/lib/extract_pose_service/: extract_object_pose
ur5_pick_and_place/devel/lib/pkgconfig/: common_sensors.pc  extract_pose_service.pc  robotiq_description.pc  robotiq_gazebo.pc  ur10_moveit_config.pc  ur10e_moveit_config.pc  ur16e_moveit_config.pc  ur20_moveit_config.pc  ur30_moveit_config.pc  ur3_moveit_config.pc  ur3e_moveit_config.pc  ur5_gripper_moveit_config.pc  ur5_moveit_config.pc  ur5_pick_and_place.pc  ur5_world.pc  ur5e_moveit_config.pc  ur_description.pc  ur_gazebo.pc  ur_kinematics.pc
ur5_pick_and_place/devel/lib/ur5_pick_and_place/: ur5_pick_and_place
ur5_pick_and_place/devel/lib/ur5_world/: pick_and_place  pick_and_place_collision  pick_and_place_collision_depth_camera
ur5_pick_and_place/src/extract_pose_service/: CMakeLists.txt  package.xml
ur5_pick_and_place/src/extract_pose_service/src/: extract_object_pose.cpp
ur5_pick_and_place/src/extract_pose_service/srv/: object_and_target_position.srv
ur5_pick_and_place/src/ur5_gripper_moveit_config/: .setup_assistant
ur5_pick_and_place/src/ur5_gripper_moveit_config/config/: gazebo_ur5.urdf  ros_controllers.yaml  sensors_3d.yaml  ur5.srdf
ur5_pick_and_place/src/ur5_gripper_moveit_config/launch/: demo_gazebo.launch  gazebo.launch
ur5_pick_and_place/src/ur5_pick_and_place/: CMakeLists.txt
ur5_pick_and_place/src/ur5_pick_and_place/src/: ur5_pick_and_place.cpp
ur5_pick_and_place/src/ur5_world/: CMakeLists.txt  package.xml
(+46 files in other folders)
